--- a/pom.xml
+++ b/pom.xml
@@ -98,8 +98,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.11</source> <!-- depending on your project -->
-                    <target>1.11</target> <!-- depending on your project -->
+                    <release>11</release>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
